[OPFM-147] -  Better explanation on why duplicate item adds fail (#5)
* toast message component to add a link to the code with better explaination of why plaid pattern prevents duplicate items for the same institutaion per user

* add explaination to troubleshooting.md

* update link for the toast and troubleshooting.md section to point to server README

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -82,6 +82,11 @@ shared styles
   background: var(--white);
 }
 
+.toast__link {
+  color: var(--white);
+  text-decoration: underline;
+}
+
 .Toastify__toast--error.toast__background {
   background: var(--red);
 }
