add error context and component (#114)
* add error context and component

* add reset to onSuccess

* clean up errors context file

* add more errors

* add icon to close message

* delete error upon close of callout

* add errors

* add invalid credentials

* add more errors

* remove institution_name!=null check

* remove hard coded error messages

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -495,3 +495,20 @@ Loading
   margin: auto;
   margin-top: -125px;
 }
+
+/*
+
+ErrorMessage
+
+*/
+
+.errMsgCallout {
+  position: relative;
+  margin-bottom: 3 * $unit;
+
+  .closeBtn {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+}
