--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -222,7 +222,7 @@ Item overview
   padding: (2 * $unit) 0 (2 * $unit) (2 * $unit);
   width: 95%;
   display: grid;
-  grid-template-columns: 8fr 6fr 9fr;
+  grid-template-columns: 8fr 3fr 3fr 9fr;
 }
 
 .item-card__column-1 {
@@ -231,6 +231,11 @@ Item overview
 }
 
 .item-card__column-2 {
+  margin-top: $unit;
+  margin-right: 2 * $unit;
+}
+
+.item-card__column-3 {
   margin-top: $unit;
 }
 
@@ -295,7 +300,7 @@ Add User Form
   padding: 1rem;
 
   .input_field {
-    margin-bottom: 0;
+    margin-bottom: 2 * $unit;
   }
 }
 
