--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -161,35 +161,32 @@ UserCard
   border-bottom: $border;
 }
 .user-card {
-  display: flex;
-}
-
-.user-card-clickable {
-  width: 100%;
-}
-
-.user-card__detail {
-  display: flex;
-  justify-content: space-around;
-  margin-left: 3 * $unit;
-}
-
-.hoverable {
-  width: 100%;
-  flex: 3;
-  display: flex;
-}
-
-.user-card__buttons {
-  padding-left: 3 * $unit;
   display: grid;
-  grid-row-gap: $unit;
-  justify-content: center;
+  grid-template-columns: 7fr 3fr;
+}
+
+.user-card__no-link {
+  display: grid;
+  grid-template-columns: 1fr;
+}
+
+.user-card__info {
+  display: grid;
+  grid-template-columns: 3fr 3fr 7fr 4fr 5fr;
+  margin-left: 2 * $unit;
+}
+
+.user-card__button {
+  padding-left: 3 * $unit;
   flex: 1;
 }
 
 .linkButton {
   font-size: 2 * $unit;
+}
+
+.user-card__callouts {
+  margin-bottom: 3 * $unit;
 }
 
 /*
@@ -211,9 +208,7 @@ Item overview
 
 .item-card {
   padding: 0 $unit 0 0;
-  background-color: $black100;
-  border-bottom: $border;
-  box-shadow: $shadow-medium;
+
   display: grid;
   grid-template-columns: 3fr 3fr 3fr 3fr;
 
@@ -236,9 +231,11 @@ Item overview
   margin-top: $unit;
 }
 
-.item-card__img {
-  height: 4 * $unit;
-  padding-right: 1rem;
+.test-update-mode {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
 }
 
 /*
@@ -357,5 +354,37 @@ h3 {
   &.accountDollars {
     margin-bottom: 1px;
     font-weight: 100;
+  }
+}
+
+.transfer-funds__input {
+  margin: 2 * $unit 0;
+  width: 40 * $unit;
+}
+
+.transfer-funds__Title {
+  margin: 0;
+}
+
+.callout {
+  margin: 2 * $unit 0;
+}
+
+.user-list {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 2 * $unit;
+  border: $border;
+  border-radius: $border-radius;
+  margin-bottom: 3 * $unit;
+  box-shadow: $shadow-xsmall;
+  padding: 2 * $unit;
+  width: 50 * $unit;
+
+  .user-list__touchable {
+    width: 30 * $unit;
+  }
+  &:hover {
+    cursor: pointer;
   }
 }
