--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -44,6 +44,7 @@ shared styles
   display: flex;
   padding: 2rem;
   align-items: center;
+  justify-content: flex-start;
 }
 
 .heading {
@@ -93,10 +94,10 @@ h3 {
   letter-spacing: -0.28px;
   font-weight: bold;
 
-  &.accountBalance {
+  &.account-balance {
     margin: 0;
   }
-  &.accountDollars {
+  &.account-dollars {
     margin-bottom: 1px;
     font-weight: 100;
   }
@@ -136,48 +137,32 @@ Landing overview
 
 /*
 
-UserCard
+Item
 
 */
 
-.user-card__box {
-  box-shadow: $shadow-medium;
-  border-bottom: $border;
-}
-.user-card {
-  display: grid;
-  grid-template-columns: 7fr 3fr;
-}
-
-.user-card__no-link {
+.item-no-link {
   display: grid;
   grid-template-columns: 1fr;
 }
 
-.user-card__info {
-  display: grid;
-  grid-template-columns: 3fr 3fr 7fr 3fr 3fr;
-  margin-left: 2 * $unit;
-}
-
-.user-card__button {
+.item__button {
   padding-left: 3 * $unit;
   flex: 1;
 }
 
-.add-account-button {
+.add-account__button {
   font-size: 2 * $unit;
 }
 
-.user-card__callouts {
+.item__callouts {
   margin-bottom: 3 * $unit;
 }
 
-/*
-
-Item info
-
-*/
+.item-info {
+  display: grid;
+  grid-template-columns: 3fr 7fr 7fr 3fr;
+}
 .test-update-mode {
   display: flex;
   flex-direction: column;
@@ -185,17 +170,14 @@ Item info
   justify-content: space-between;
 }
 
-.update_mode_note {
+.update-mode__note {
   margin-top: $unit;
 }
 
-.remove_bank_button_container {
+.remove-bank__button-container {
   display: flex;
   justify-content: center;
   align-items: flex-end;
-  .remove_bank_button {
-    max-width: 10 * $unit;
-  }
 }
 
 /*
@@ -204,7 +186,7 @@ Add User Form
 
 */
 
-.addUserForm {
+.add-user__form {
   margin-top: 3 * $unit;
 }
 
@@ -251,11 +233,11 @@ ErrorMessage
 
 */
 
-.err-msg__callout {
+.error-msg__callout {
   position: relative;
   margin-bottom: 3 * $unit;
 
-  .close-btn {
+  .close-error__button {
     position: absolute;
     right: 0;
     top: 0;
@@ -273,7 +255,7 @@ Pattern account
   justify-content: space-between;
 }
 
-.transfer-funds__button__container {
+.transfer-funds__button-container {
   display: flex;
   align-items: center;
 }
